# translator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md~  cmake_install.cmake  dict_AR.xml  dict_BG.xml  dict_DE.xml  dict_EN.xml  dict_ES.xml  dict_FR.xml  dict_IT.xml  dict_JA.xml  dict_PT.xml  dict_RU.xml  dict_ZH.xml  main.cpp  main.cpp~  translator
activities_at_home/: activities_at_home_AR.xml  activities_at_home_BG.xml  activities_at_home_DE.xml  activities_at_home_EN.xml  activities_at_home_ES.xml  activities_at_home_FR.xml  activities_at_home_IT.xml  activities_at_home_JA.xml  activities_at_home_PT.xml  activities_at_home_RU.xml  activities_at_home_ZH.xml
art/: art_AR.xml  art_BG.xml  art_DE.xml  art_EN.xml  art_ES.xml  art_FR.xml  art_IT.xml  art_JA.xml  art_PT.xml  art_RU.xml  art_ZH.xml
at_the_hospital/: at_the_hospital_AR.xml  at_the_hospital_BG.xml  at_the_hospital_DE.xml  at_the_hospital_EN.xml  at_the_hospital_ES.xml  at_the_hospital_FR.xml  at_the_hospital_IT.xml  at_the_hospital_JA.xml  at_the_hospital_PT.xml  at_the_hospital_RU.xml  at_the_hospital_ZH.xml
at_the_market/: at_the_market_AR.xml  at_the_market_BG.xml  at_the_market_DE.xml  at_the_market_EN.xml  at_the_market_ES.xml  at_the_market_FR.xml  at_the_market_IT.xml  at_the_market_JA.xml  at_the_market_PT.xml  at_the_market_RU.xml  at_the_market_ZH.xml
at_the_seaside/: at_a_seaside_BG.xml  at_the_seaside_AR.xml  at_the_seaside_BG.xml  at_the_seaside_DE.xml  at_the_seaside_EN.xml  at_the_seaside_ES.xml  at_the_seaside_FR.xml  at_the_seaside_IT.xml  at_the_seaside_JA.xml  (+3 more)
(+303 files in other folders)
